@@ -1,2 +1,1 @@
-# set of available languages (in alphabetic order)
-
+de
